--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,21 @@
-{% comment %} 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets App</title>
+    <title>{% block title %}My Site{% endblock %}</title>
 </head>
 <body>
     <header>
+        <h1>My Site</h1>
         <nav>
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'pets' %}">Pets List</a>
-
+            <ul>
+                <li><a href="{% url 'car_list' %}">Car List</a></li>
+                <li><a href="{% url 'car_create' %}">Create Car</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         {% block content %}
-        {% endblock content %}
+        {% endblock %}
     </main>
-    <footer>
-        <p>ASAC Team</p>
-    </footer>
 </body>
-</html> {% endcomment %}
+</html>
